tools/k8s/keystone/overlays/dev/deployment-py.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: keystone-py
  name: keystone-py
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: keystone-py
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keystone-py
    spec:
      containers:
        - env:
            - name: OS_DATABASE__CONNECTION
              valueFrom:
                secretKeyRef:
                  key: fqdn-uri
                  name: keystone-db-app
          command: ["uwsgi", "--http-socket", ":5000", "-b", "65535", "-w", "keystone.server.wsgi:initialize_public_application()"]
          image: py-keystone
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: 5000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: keystone-py
          ports:
            - containerPort: 5000
              name: http-py
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: 5000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 600
            httpGet:
              path: /healthcheck
              port: 5000
              scheme: HTTP
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /etc/keystone/fernet-keys
              name: fernet
            - mountPath: /etc/keystone/keystone.conf
              name: config
              subPath: keystone.conf

      volumes:
        - name: config
          configMap:
            name: keystone
        - name: fernet
          secret:
            defaultMode: 420
            optional: false
            secretName: fernet-keys
            items:
              - key: "k0"
                path: "0"
              - key: "k1"
                path: "1"
