tools/k8s/keystone/overlays/dev/deployment-rs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: keystone-rs
  name: keystone-rs
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: keystone-rs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keystone-rs
    spec:
      containers:
        - env:
            - name: OS_DATABASE__CONNECTION
              valueFrom:
                secretKeyRef:
                  key: fqdn-uri
                  name: keystone-db-app
          command: ["keystone", "-vv"]
          image: keystone-rs
          name: keystone
          ports:
            - containerPort: 8080
              name: opa
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/keystone/fernet-keys
              name: fernet
            - mountPath: /etc/keystone/keystone.conf
              name: config
              subPath: keystone.conf

        - command: ["opa", "run", "--server", "/policy", "--addr", ":8181"]
          image: opa
          name: opa
          ports:
            - containerPort: 8181
              name: http
              protocol: TCP
          volumeMounts:
            - name: policy
              mountPath: /policy
      volumes:
        - name: config
          configMap:
            name: keystone
        - name: fernet
          secret:
            defaultMode: 420
            optional: false
            secretName: fernet-keys
            items:
              - key: "k0"
                path: "0"
              - key: "k1"
                path: "1"
        - name: policy
          emptyDir: {}
